[gd_scene load_steps=13 format=3 uid="uid://hy1k0xv8xbfh"]

[ext_resource type="Script" uid="uid://cj88ttq5f14yw" path="res://Scripts/Vistas/usuarios.gd" id="1_2bep4"]
[ext_resource type="PackedScene" uid="uid://d2lg7n0j8phb3" path="res://Scenes/Componentes/header.tscn" id="1_431t1"]
[ext_resource type="PackedScene" uid="uid://cyx2rvgubown8" path="res://Scenes/Componentes/lateral_menu.tscn" id="2_348d6"]
[ext_resource type="PackedScene" uid="uid://clcmkgjftrhqq" path="res://Scenes/Componentes/panel.tscn" id="3_2bep4"]
[ext_resource type="Theme" uid="uid://ys5m5jo3mjhs" path="res://Sprites/Estilos/theme.tres" id="4_dudw5"]
[ext_resource type="Theme" uid="uid://byuw71bepva6s" path="res://Sprites/Estilos/theme_ext.tres" id="5_wbts0"]
[ext_resource type="Texture2D" uid="uid://dcqgdqe85sx62" path="res://Sprites/iconos/1x_web/ic_account_circle_white_48dp.png" id="6_8mg3y"]
[ext_resource type="PackedScene" uid="uid://dihpnk8kbtrdr" path="res://Scenes/Componentes/campo_tabla.tscn" id="7_348d6"]
[ext_resource type="Texture2D" uid="uid://cxpf06getr8e8" path="res://Sprites/Referencias/wireframe_desktop.png" id="8_348d6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwinh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wnrn"]
bg_color = Color(0.658824, 0.72549, 0.768627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uuio0"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.713726, 0.819608, 0.760784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Usuarios" type="Panel" groups=["vistas"]]
offset_right = 1142.0
offset_bottom = 602.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwinh")
script = ExtResource("1_2bep4")
metadata/_edit_lock_ = true

[node name="Header" parent="." instance=ExtResource("1_431t1")]
layout_mode = 0

[node name="LateralMenu" parent="." instance=ExtResource("2_348d6")]
layout_mode = 0
offset_top = 75.0
offset_bottom = 602.0

[node name="PanelFiltros" parent="." instance=ExtResource("3_2bep4")]
layout_mode = 0
offset_left = 196.0
offset_top = 90.0
offset_right = 1125.0
offset_bottom = 165.0

[node name="LinNombre" type="LineEdit" parent="PanelFiltros"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 210.0
offset_bottom = 60.0
theme = ExtResource("4_dudw5")
placeholder_text = "Nombre o Apellidos"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LinTipo" type="LineEdit" parent="PanelFiltros"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 360.0
offset_bottom = 60.0
theme = ExtResource("4_dudw5")
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="OptTipo" type="OptionButton" parent="PanelFiltros"]
layout_mode = 0
offset_left = 375.0
offset_top = 15.0
offset_right = 510.0
offset_bottom = 60.0
focus_mode = 0
theme = ExtResource("5_wbts0")
alignment = 1
text_overrun_behavior = 3
selected = 0
item_count = 3
popup/item_0/text = "Cédula"
popup/item_0/id = 0
popup/item_1/text = "Teléfono"
popup/item_1/id = 1
popup/item_2/text = "eMail"
popup/item_2/id = 2
metadata/_edit_lock_ = true

[node name="OptRol" type="OptionButton" parent="PanelFiltros" groups=["opt_roles"]]
layout_mode = 0
offset_left = 525.0
offset_top = 16.0
offset_right = 661.0
offset_bottom = 61.0
focus_mode = 0
theme = ExtResource("5_wbts0")
alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="BtnBuscar" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 675.0
offset_top = 14.0
offset_right = 780.0
offset_bottom = 59.0
focus_mode = 0
theme = ExtResource("4_dudw5")
theme_override_styles/normal = SubResource("StyleBoxFlat_8wnrn")
text = "Buscar"
metadata/_edit_lock_ = true

[node name="BtnNuevo" type="Button" parent="PanelFiltros"]
layout_mode = 0
offset_left = 810.0
offset_top = 15.0
offset_right = 915.0
offset_bottom = 60.0
focus_mode = 0
theme = ExtResource("4_dudw5")
text = "Nuevo"
metadata/_edit_lock_ = true

[node name="PanelTabla" parent="." instance=ExtResource("3_2bep4")]
layout_mode = 0
offset_left = 194.0
offset_top = 179.0
offset_right = 828.0
offset_bottom = 588.0

[node name="Titulos" type="HBoxContainer" parent="PanelTabla"]
layout_mode = 2
offset_left = 6.0
offset_top = 7.0
offset_right = 628.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_lock_ = true

[node name="TxtId" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dudw5")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtNombre" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme = ExtResource("4_dudw5")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Nombre y Apellidos"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtTipo" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("4_dudw5")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Cédula"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TxtRol" type="Label" parent="PanelTabla/Titulos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("4_dudw5")
theme_override_styles/normal = SubResource("StyleBoxFlat_uuio0")
text = "Rol"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Tabla" type="ScrollContainer" parent="PanelTabla"]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 627.0
offset_bottom = 401.0
metadata/_edit_lock_ = true

[node name="Registros" type="VBoxContainer" parent="PanelTabla/Tabla"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="PanelDetalles" parent="." instance=ExtResource("3_2bep4")]
layout_mode = 0
offset_left = 840.0
offset_top = 179.0
offset_right = 1128.0
offset_bottom = 591.0

[node name="SprUsuario" type="Sprite2D" parent="PanelDetalles"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(143, 41)
scale = Vector2(1.45834, 1.4375)
texture = ExtResource("6_8mg3y")
metadata/_edit_lock_ = true

[node name="TxtId" type="Label" parent="PanelDetalles"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 54.0
offset_bottom = 30.0
theme = ExtResource("4_dudw5")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3
metadata/_edit_lock_ = true

[node name="TxtNombre" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 11.0
offset_top = 76.0
offset_right = 274.0
offset_bottom = 117.0
size_flags_stretch_ratio = 3.0
disabled = true
text = "*** Nombre ***"

[node name="TxtCedula" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 11.0
offset_top = 122.0
offset_right = 274.0
offset_bottom = 163.0
size_flags_stretch_ratio = 3.0
disabled = true
text = "*** Cédula ***"

[node name="TxtTelefono" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 12.0
offset_top = 168.0
offset_right = 275.0
offset_bottom = 209.0
size_flags_stretch_ratio = 3.0
text = "*** Telefono ***"

[node name="TxtEmail" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 12.0
offset_top = 214.0
offset_right = 275.0
offset_bottom = 255.0
size_flags_stretch_ratio = 3.0
text = "*** eMail ***"

[node name="TxtCentro" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 13.0
offset_top = 264.0
offset_right = 135.0
offset_bottom = 305.0
size_flags_stretch_ratio = 3.0
text = "*** Centro ***"

[node name="TxtRol" parent="PanelDetalles" instance=ExtResource("7_348d6")]
layout_mode = 0
offset_left = 149.0
offset_top = 265.0
offset_right = 271.0
offset_bottom = 306.0
size_flags_stretch_ratio = 3.0
text = "*** Rol ***"

[node name="BtnPermisos" type="Button" parent="PanelDetalles"]
layout_mode = 0
offset_left = 151.0
offset_top = 332.0
offset_right = 271.0
offset_bottom = 377.0
focus_mode = 0
theme = ExtResource("4_dudw5")
text = "Permisos"
metadata/_edit_lock_ = true

[node name="BtnCredenciales" type="Button" parent="PanelDetalles"]
layout_mode = 0
offset_left = 17.0
offset_top = 332.0
offset_right = 137.0
offset_bottom = 377.0
focus_mode = 0
theme = ExtResource("4_dudw5")
text = "Credenciales"
metadata/_edit_lock_ = true

[node name="SprMockups" type="Sprite2D" parent="." groups=["ocultable"]]
visible = false
self_modulate = Color(1, 1, 1, 0.486275)
position = Vector2(0, -630)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_348d6")
centered = false
metadata/_edit_lock_ = true

[connection signal="item_selected" from="PanelFiltros/OptTipo" to="." method="_on_opt_tipo_item_selected"]
[connection signal="pressed" from="PanelFiltros/BtnBuscar" to="." method="_on_btn_buscar_pressed"]
[connection signal="pressed" from="PanelFiltros/BtnNuevo" to="." method="_on_btn_nuevo_pressed"]
